--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #553055;
 }
 
 /* app styles */
 .App {
-  max-width: 400px;
-  margin: 30px auto;
+  background: #4c2a4c;
+  margin: 20px auto;
+  width: 90%;
+  max-width: 700px;
+  color: #eee;
+
   text-align: center;
+}
+
+.navbar {
+  padding: 10px 20px;
+  text-align: center;
+  background: #6d3d6d;
+}
+
+.navbar h1 {
+  margin: 10px 0;
 }
 
 nav {
